# ExempleQt

./: CMakeLists.txt  Demo.cpp  Demo.h  ReadMe.md  demo.cpp  demo.h  demo.ui  main.cpp
